// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > matches snapshot for single-column layout 1`] = `
<DocumentFragment>
  <div
    class="mx-auto grid h-full min-h-0 w-full max-w-[104rem] items-start gap-3 px-3 py-2 sm:gap-6 sm:px-4 sm:py-3 lg:px-6 flex flex-col"
  >
    <main
      class="min-h-0 min-w-0 [overscroll-behavior:contain] h-full overflow-y-auto flex-1"
    >
      <div>
        settings-like-content
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > matches snapshot for three-column layout 1`] = `
<DocumentFragment>
  <div
    class="mx-auto grid h-full min-h-0 w-full max-w-[104rem] items-start gap-3 px-3 py-2 sm:gap-6 sm:px-4 sm:py-3 lg:px-6 grid-cols-[20rem_minmax(0,1fr)_10rem] md:grid-cols-[20rem_minmax(0,1fr)_20rem] lg:grid-cols-[20rem_minmax(0,1fr)_34rem] xl:grid-cols-[20rem_minmax(0,1fr)_40rem]"
  >
    <aside
      class="sticky top-0 h-full min-h-0 max-h-full self-start overflow-y-auto bg-card [overscroll-behavior:contain] rounded-l-lg border-r border-border"
    >
      <div>
        left
      </div>
    </aside>
    <main
      class="min-h-0 min-w-0 [overscroll-behavior:contain] h-full overflow-y-auto"
    >
      <div>
        middle
      </div>
    </main>
    <aside
      class="sticky top-0 h-full min-h-0 max-h-full self-start overflow-y-auto bg-card [overscroll-behavior:contain] rounded-r-lg border-l border-border"
    >
      <div>
        right
      </div>
    </aside>
  </div>
</DocumentFragment>
`;
